fixes a11y color contrast on map zoom control

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2530,3 +2530,10 @@ table {
     text-decoration: none;
   }
 }
+
+.leaflet-bar a {
+
+  &.leaflet-disabled {
+    color: #525252 !important;
+  }
+}
